Some minor efficiency improvements relating to parsing numbers
(cherry picked from commit 2f34be5a226a9e6817a3f7a3e1ab4d12f8afb994)